--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-       
+
     - name: Set up CMake
       uses: threeal/cmake-action@main
 
@@ -25,15 +25,15 @@ jobs:
         sudo apt-get install -y libgtest-dev
         sudo apt-get install -y lcov
         sudo apt-get install -y gcovr
-        
-        
+
+
     - name: Lizard Runner
       uses: Uno-Takashi/Lizard-Runner@v3
       with:
           path: "./"
           CCN: "3"
           exclude: "./build/*"
-          
+
 
     - name: Configure CMake
       run: cmake -Bbuild -H.
@@ -45,9 +45,9 @@ jobs:
       run: |
         cd build
         ctest --output-on-failure
-        
+
     - name: collect coverage
-      run: gcovr --gcov-exclude=".*Tests.*" --gcov-exclude=".*test.*" -r . --html --html-details -o coverage.html --print-summary
+      run: gcovr -f *.h -r . --html --html-details -o coverage.html --print-summary
 
     - name: create coverage artifact
       uses: actions/upload-artifact@v3
